--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 numpy
 pandas
 plotly
-#plotly.express
-#plotly.graph_objects==5.15.0
+plotly.express
+plotly.graph_objects==5.15.0
 dash
-dash_bootstrap_components
-#inspect
-#base64
-#platform
-#os
-gunicorn==19.7.1
+inspect
+base64
+platform
+os
